# scriptwriting

./: README.md  pyproject.toml
src/scriptwriting_flow/: main.py  types.py
src/scriptwriting_flow/crews/research_crew/: research_crew.py
src/scriptwriting_flow/crews/research_crew/config/: agents.yaml  tasks.yaml
src/scriptwriting_flow/crews/scriptwriting_crew/: scriptwriting_crew.py
src/scriptwriting_flow/crews/scriptwriting_crew/config/: agents.yaml  tasks.yaml
src/scriptwriting_flow/crews/validation_crew/: validation_crew.py
src/scriptwriting_flow/crews/validation_crew/config/: agents.yaml  tasks.yaml
src/scriptwriting_flow/crews/visual_crew/: visual_crew.py
src/scriptwriting_flow/crews/visual_crew/config/: agents.yaml  tasks.yaml
