[project]
name = "scriptwriting_flow"
version = "0.1.0"
description = "scriptwriting using crewAI"
authors = [{ name = "Joao", email = "joao@prado.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
kickoff = "scriptwriting_flow.main:kickoff"
plot = "scriptwriting_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
